2016-06-02  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-497

	* src/lin_alg.cc (lubacksub):

	Fix warning in Release build about unused variables. Variables only
	used in assertions should be enclosed in the DEBUG_ONLY() macro.

	* src/rational.h:

	Include math_funcs.h to make fac(Numeric) function known at compile
	time. Avoids warning about Rational::fac calling itself.

2016-06-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-496

	* src/lin_alg.cc (inv):

	Fix memory leak. ipiv was allocated but never freed. Reported by
	Richard.

2016-05-30  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-495

	* doc/uguide/rte_theory.tex: Fixed error in Eq 6.50, pointed out
	by Simon.

2016-05-30 Jakob Dörr  <jakobdoerr@googlemail.com>

	* arts-2-3-494

	* src/doit.cc (doit_i_field_ngAcceleration):

	 Fixed another bug in the convergence acceleration concerning NaN values.

2016-05-25  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-493
	
	* src/{m_,}zeeman.cc:  Added a zeeman_frequencyshiftconstant_precalc varible 
	and precalc a value per Zeeman split line for the splitting.  
	This reduce redundant calculations that previously repeated at every level.

2016-05-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-492

	* src/disort.cc, disort.h, m_disort.cc, methods.cc:
	Renamed pfct_method options. Added options for using highest or median
	T_grid points. Made median the default option.

	NOTE 1: Renaming breaks backward compatibility.

	NOTE 2: The default change might (slightly) modify your results if you
	had run with default option before (equiv. to 'low').

	* 3rdparty/disort1.2/DISORT.f.orig, ErrPack.f.orig:
	(Re)Added original code files.

	* 3rdparty/polradtran, 3rdparty/polradtran/rt4/*:
	Added place for polradtran (RT3/4) code and original RT4 code.

2016-05-24 Jakob Dörr  <jakobdoerr@googlemail.com>

	* arts-2-3-492

	* src/m_doit.cc (doit_i_field_monoIterate):

	 Fixed a bug in the convergence acceleration
